test/fail/entityvoidtype.app
//Type 'Void' is not allowed

application test

entity User {
  authoredPapers : Void
}

page root {}